--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="nav__menu" id="nav-menu">
                 <ul class="nav__list">
                     <li class="nav__item"><a href="#home" class="nav__link active">ANA SAYFA</a></li>
-                    <li class="nav__item"><a href="#about" class="nav__link">HAKKIMIZDA</a></li>
+                    <li class="nav__item"><a href="#about" class="nav__link">HAKKIMDA</a></li>
                     
                     <li class="nav__item"><a href="#contact" class="nav__link">İLETİŞİM</a></li>
                 </ul>
