--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -52,7 +51,7 @@
             <h2 class="section-title">Hakkımda</h2>
 
             <div class="about__container bd-grid">
-                
+                <div class="about__img">
                     
                 </div>
 
