--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                 <div>
                     <h2 class="about__subtitle">Adım mehmet yiğit ÖZTAŞ</h2>
                     <span class="about__profession">HTML5/CSS3 web yazılımları alanı.jpgnda gendimi geliştirmeye çalışıyorum</span>
-                    <p class="about__text">Kocaeli'nde yaşıyorum .</p>
+                    <p class="about__text"></p>
                     <div class="about__social">
                         <a href="https://www.youtube.com" class="about__social-icon"><i class='bx bxl-linkedin' ></i></a>
                         <a href="#" class="about__social-icon"><i class='bx bxl-github' ></i></a>
